# alert-manager

./: .env.example  .gitignore  README.md  pyproject.toml
src/alert_manager/: __init__.py  alert_log.py  app.py  config.py  google_sheet_reader.py  manager.py  models.py
tests/: test_core_logic.py  test_manager.py
