[project]
name = "alert-manager"
version = "0.1.0"
description = "GridWorks alert management service."
readme = "README.md"
authors = [
    { name = "thdfw", email = "th.defauw@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
alert-manager = "alert_manager:main"

[project.urls]
Homepage = "https://github.com/thdfw/alert-manager"
Repository = "https://github.com/thdfw/alert-manager"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alert_manager"]

[tool.ruff]
src = ["src", "tests"]
exclude = [".git", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
packages = ["alert_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
